# quant-hedge-fund-incubator

./: .env.example  .gitignore  ARCHITECTURE.md  LICENSE  README.md  pyproject.toml  qhfi-cli.spec
config/: data_state.yaml  managers_13f.yaml  managers_13f_top100.yaml  settings.yaml
docs/: DATA.md  MARKET_MAKING.md  RISK_ATTRIBUTION.md  event_driven_engine.md  factors.md  models.md  strategies.md
notebooks/: new_alpha_study_2026-06.md
packaging/: qhfi_entry.py
scripts/: _crypto_top10.py  build_barra_model.py  build_cusip_crosswalk.py  build_graph_dashboard.py  build_manager_graph.py  build_market_maker.py  build_mdp_allocator.py  build_ml_model.py  build_multialpha.py  build_nasdaq100_universe.py  build_nasdaq_universe.py  build_portfolio.py  build_rates_model.py  build_sp500_universe.py  calibrate_as_params.py  check_alpaca.py  compare_edgar_yfinance.py  demo_backtest.py  demo_data.py  demo_mpt_bl.py  diagnose_diff.py  edgar_probe.py  eval_alpha101.py  eval_value_factor.py  explore_yfinance.py  factor_heatmap.py  gen_data_docs.py  migrate_lake.py  place_order.py  portfolio_is_oos.py  probe_crypto_1m.py  probe_intl_sources.py  probe_macro_sources.py  probe_rates_options.py  pull_13f.py  pull_13f_bulk.py  pull_commodities.py  pull_crypto_minute.py  pull_edgar_fundamentals.py  pull_equity_options.py  (+18 more)
tests/: test_allocations.py  test_alpaca_broker.py  test_alpha101.py  test_api_management.py  test_backtest_engine.py  test_barra.py  test_build_cusip_crosswalk.py  test_butterfly.py  test_config.py  test_construction.py  test_contracts.py  test_costs.py  test_edgar.py  (+52 more)
(+135 files in other folders)
