[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qhfi"
version = "0.0.1"
description = "Quant Hedge Fund Incubator — idea → backtest → evaluation → paper, with LLM research agents"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "polars>=1.0",
    "pyarrow>=16",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pyyaml>=6.0",
    "exchange-calendars>=4.5",
    "ccxt>=4.3",
    "yfinance>=0.2.40",
    "alpaca-py>=0.21",
    "quantstats>=0.0.62",
    "scikit-learn>=1.4",
    "httpx>=0.27",
    "openpyxl>=3.1",          # .xlsx reader (geopolitics GPR / general)
    "xlrd>=2.0",              # legacy .xls reader (GPR workbook is .xls)
    "typer>=0.12",
    "rich>=13.7",
    "APScheduler>=3.10",
]

[project.optional-dependencies]
ib = ["ib_insync>=0.9.86"]
dev = ["pytest>=8.2", "pytest-cov>=5.0", "ruff>=0.5", "mypy>=1.10"]

[project.scripts]
qhfi = "qhfi.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/qhfi"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
